--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -1,4 +1,4 @@
-.example-toolbar {
+.toolbar {
   position: fixed;
   z-index: 2;
 }
